--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "mocha-multi": "^1.1.3",
+    "npm": "^7.11.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "start": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +37,11 @@
     "jsdom-global": "3.0.2",
     "mocha": "^5.2.0",
     "sinon": "^6.3.5"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
